# trabalho-final-colheita-feliz

./: CMakeLists.txt  README.md  sdkconfig.old
components/: CMakeLists.txt  gpio_setup.c  mqtt_app.c  mqtt_app.h  oled_display.c  rele.c  rele.h  soil_moisture.c  soil_moisture.h
components /mqtt/: CMakeLists.txt  mqtt_app.c  mqtt_app.h
esp_controle/: CMakeLists.txt
esp_controle/button/: button.c  button.h
esp_controle/main/: CMakeLists.txt  main.c
esp_controle/mqtt_config/: CMakeLists.txt  mqtt.c  mqtt.h
esp_controle/wifi_config/: wifi.c  wifi.h
esp_rele/: CMakeLists.txt
esp_rele/main/: CMakeLists.txt  main.c
esp_rele/mqtt_config/: CMakeLists.txt  mqtt.c  mqtt.h
esp_rele/relay/: CMakeLists.txt  relay.c  relay.h
esp_rele/wifi_config/: CMakeLists.txt  wifi.c
esp_sensores/: CMakeLists.txt
esp_sensores/main/: CMakeLists.txt  main.c
esp_sensores/mqtt_config/: CMakeLists.txt  mqtt.c  mqtt.h
esp_sensores/oled_display/: CMakeLists.txt  oled_display.c  oled_display.h
esp_sensores/relay/: CMakeLists.txt  relay.c  relay.h
esp_sensores/sensor/: CMakeLists.txt
esp_sensores/soil_moisture/: CMakeLists.txt  soil_moisture.c  soil_moisture.h
esp_sensores/water_sensor/: CMakeLists.txt  water_sensor.c  water_sensor.h
esp_sensores/wifi_config/: wifi.c
main/: CMakeLists.txt  dht11.c  dht11.h  main.c  waterSensor.c  waterSensor.h  wifi_ap.c
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.c
src/mqtt_config/: CMakeLists.txt  mqtt.c
src/oled_display/: oled_display.c  oled_display.h
src/sensor/: CMakeLists.txt  dht11.c  (+2 more)
util/: CMakeLists.txt
(+4 files in other folders)
